fix: address bar showing on mobile test

--- a/apps/realms-landing/src/styles/global.css
+++ b/apps/realms-landing/src/styles/global.css
@@ -32,10 +32,20 @@ button {
 
 body {
   @apply text-lg leading-loose text-off-300 font-body;
+
+  height: 100%;
+  position: fixed;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 hr {
   @apply my-8;
+}
+
+html {
+  overflow: hidden;
+  width: 100%;
 }
 
 @font-face {
